# rogue-fm

./: .gitignore  README.md  dev.db.backup-20260531-1738  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/audio/[recordingId]/: route.ts
app/api/logo/[stationId]/: route.ts
app/api/lookup/[stationSlug]/[recordingSlug]/: route.ts
app/api/recordings/: route.ts
app/api/recordings/[recordingId]/: route.ts
app/api/recordings/[recordingId]/process/: route.ts
app/api/recordings/upload/: route.ts
app/api/segments/[segmentId]/: route.ts
app/api/segments/[segmentId]/split/: route.ts
app/api/station/: route.ts
app/api/stations/: route.ts
app/api/stations/[stationId]/: route.ts
app/api/stations/[stationId]/logo/: route.ts
app/editor/[recordingId]/: page.tsx
app/editor/[stationSlug]/[recordingSlug]/: page.tsx
app/upload/: page.tsx
components/: Cover.tsx  CoverFlow.tsx  MiniDock.tsx  NowPlaying.tsx  SegmentRibbon.tsx  Sidebar.tsx  SkipControls.tsx  Toggle.tsx  Topbar.tsx  UpNext.tsx
lib/: broadcastClock.ts  broadcastEngine.ts  db.ts  mediaSession.ts  player.ts  processing.ts  skipLogic.ts  slug.ts  static.ts  types.ts
ml/: main.py  process.py  pyproject.toml
ml/scripts/: test-process.sh
prisma/: schema.prisma  seed.ts
prisma/migrations/20260514100806_init/: migration.sql
prisma/migrations/20260524080836_editor_phase3a/: migration.sql
prisma/migrations/20260531094535_slugs/: migration.sql
scripts/: backfill-slugs.ts
