[project]
name = "rogue-fm-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inaspeechsegmenter>=0.7.12",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "onnxruntime>=1.26.0",
    "scikit-learn>=1.8.0",
]

[tool.uv]
# Personal local macOS build: resolve only for this platform so the solver
# doesn't try to satisfy Linux-only CUDA / onnxruntime-gpu wheels.
# (Linux self-hosters: widen or remove this.)
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
override-dependencies = ["onnxruntime-gpu; platform_system == 'Linux'"]
